feat: include credential in response
